--- a/terms.html
+++ b/terms.html
@@ -24,7 +24,7 @@
     <link href="css/fontawesome-all.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 
-    <link rel="icon" href="images/favicon.png">
+    <link rel="icon" href="images/2890581_ai_artificial intelligence_electronics_light bulb_robotics_icon.svg">
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
@@ -34,7 +34,7 @@
         <div class="container">
 
 
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a>
+            <a class="navbar-brand logo-image" href="index.html"><img src="images/2890581_ai_artificial intelligence_electronics_light bulb_robotics_icon.svg" alt="alternative"></a>
 
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Drop</a>
+                            aria-haspopup="true" aria-expanded="false"></a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item page-scroll" href="project.html">Detalhes do Projeto</a>
                             <div class="dropdown-divider"></div>
